Add name atribute

--- a/04/index.html
+++ b/04/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="author" content="Mateusz Bogolubow">
+    <meta name="Pawel Foit" content="Mateusz Bogolubow">
     <title>JavaScript: API & FETCH - #04, devmentor.pl</title>
 </head>
 <body>
     <form class="form">
         <div class="form__row">
             <label class="form__label">
-                latitude: <input class="form__field form__field--lat" />
+                latitude: <input class="form__field form__field--lat" name="latitude" required />
             </label>
         </div>
         <div class="form__row">
             <label class="form__label">
-                    longitude: <input class="form__field form__field--lng" />
+                    longitude: <input class="form__field form__field--lng" name="longitude" required />
             </label>
         </div>
         <div class="form__row">
@@ -27,6 +27,7 @@
     <section class="weather">
         <p>Pogodę w obecnej chwili w miejscu o szerokości geograficznej: <strong class="weather__lat">XXX</strong> i długości geograficznej: <strong class="weather__lng">YYY</strong> można określić jako: <strong class="weather__summary">???</strong>, gdzie temperatura wynosi: <strong class="weather__temperature">0</strong>&#8457;</p>
     </section>
+    <script src="./app.js"></script>
     
 </body>
 </html>
